--- a/src/css/custom_reset.css
+++ b/src/css/custom_reset.css
@@ -1,4 +1,28 @@
+:root {
+    --text-dark: #1a1e2d;
+    --text-light: #fff;
+    --slide-bg: #5f6579;
+  
+    --primary: #02b663;
+    --primary-light: #f6f3f1;
+    --secondary: #fed857;
+  }
+* {
+    box-sizing: border-box;
+}
+html {
+    font-size: 62.5%;
+}
+body {
+    font-size: 1.6rem;
+}
 a {
     text-decoration: none;
     color: inherit;
+}
+/* layout */
+.wrap {
+    max-width: 1170px;
+    margin: 0 auto;
+    padding: 0 2rem;
 }
