--- a/src/css/custom_reset.css
+++ b/src/css/custom_reset.css
@@ -1,12 +1,13 @@
 :root {
     --text-dark: #1a1e2d;
     --text-light: #fff;
+    --text-second: #838694;
     --slide-bg: #5f6579;
-  
+
     --primary: #02b663;
     --primary-light: #f6f3f1;
     --secondary: #fed857;
-  }
+}
 * {
     box-sizing: border-box;
 }
@@ -24,5 +25,4 @@ a {
 .wrap {
     max-width: 1170px;
     margin: 0 auto;
-    padding: 0 2rem;
 }
