--- a/src/css/modules.css
+++ b/src/css/modules.css
@@ -5,18 +5,28 @@
 *   효과
 */
 
-
 button {
     cursor: pointer;
     background: transparent;
     border: none;
 }
 /* shape & size */
-.btn-192 {
+.btn-160 {
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    width: 19.2rem;
+    width: 16rem;
+    height: 4rem;
+    border-radius: 3rem;
+    font-size: 1.4rem;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+.btn-190 {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 19rem;
     height: 6rem;
     border-radius: 3rem;
     font-size: 1.4rem;
@@ -26,8 +36,8 @@ button {
 /* ef */
 .btn-main-ef {
     position: relative;
-    transition: .3s ease-in-out;
-    overflow: hidden; 
+    transition: 0.3s ease-in-out;
+    overflow: hidden;
 }
 .btn-main-ef:hover {
     background: transparent;
@@ -56,7 +66,7 @@ button {
 }
 .btn-primary::before {
     background: var(--secondary);
-}   
+}
 
 .btn-secondary {
     background: var(--secondary);
