🐛 title group color

--- a/src/css/modules.css
+++ b/src/css/modules.css
@@ -38,6 +38,7 @@ button {
     position: relative;
     transition: 0.3s ease-in-out;
     overflow: hidden;
+    z-index: 1;
 }
 .btn-main-ef:hover {
     background: transparent;
