--- a/src/css/custom_reset.css
+++ b/src/css/custom_reset.css
@@ -1,7 +1,7 @@
 :root {
     --text-dark: #1a1e2d;
     --text-light: #fff;
-    --text-second: #838694;
+    --text-sub: #838694;
     --slide-bg: #5f6579;
 
     --primary: #02b663;
