--- a/src/css/modules.css
+++ b/src/css/modules.css
@@ -81,9 +81,10 @@ button {
 
 .btn-tertiary {
     background: var(--text-dark);
+    color: white;
 }
 .btn-tertiary::before {
-    background: var(--secondary);
+    background: var(--primary);
 }
 
 .btn-outlined {
