--- a/src/css/grid.css
+++ b/src/css/grid.css
@@ -48,3 +48,72 @@ div[class^=col] {
 .col-lg-12 {
     width: calc(100% / 12 * 12);
 }
+
+
+@media screen and (max-width: 1024px){
+    .col-md-1 {
+        width: calc(100% / 12 * 1);
+    }
+    .col-md-2 {
+        width: calc(100% / 12 * 2);
+    }
+    
+    .col-md-3 {
+        width: calc(100% / 12 * 3);
+    }
+    
+    .col-md-4 {
+        width: calc(100% / 12 * 4);
+    }
+    
+    .col-md-5 {
+        width: calc(100% / 12 * 5);
+    }
+    
+    .col-md-6 {
+        width: calc(100% / 12 * 6);
+    }
+    
+    .col-md-7 {
+        width: calc(100% / 12 * 7);
+    }
+    
+    .col-md-8 {
+        width: calc(100% / 12 * 8);
+    }
+    
+    .col-md-9 {
+        width: calc(100% / 12 * 9);
+    }
+    
+    .col-md-10 {
+        width: calc(100% / 12 * 10);
+    }
+    .col-md-11 {
+        width: calc(100% / 12 * 11);
+    }
+    .col-md-12 {
+        width: calc(100% / 12 * 12);
+    }
+}
+
+@media screen and (max-width: 786px){
+   .col-sm-1 {
+       width: calc(100% / 6 * 1);
+   }
+   .col-sm-2 {
+       width: calc(100% / 6 * 2);
+   }
+   .col-sm-3 {
+       width: calc(100% / 6 * 3);
+   }
+   .col-sm-4 {
+       width: calc(100% / 6 * 4);
+   }
+   .col-sm-5 {
+        width: calc(100% / 6 * 5);
+    }
+    .col-sm-6 {
+        width: calc(100% / 6 * 6);
+    }
+}
