--- a/src/css/modules.css
+++ b/src/css/modules.css
@@ -11,6 +11,17 @@ button {
     border: none;
 }
 /* shape & size */
+.btn-100 {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 10rem;
+    height: 3rem;
+    border-radius: 3rem;
+    font-size: 1.3rem;
+    font-weight: bold;
+    text-transform: uppercase;
+}
 .btn-160 {
     display: inline-flex;
     justify-content: center;
@@ -239,4 +250,27 @@ button {
 }
 .day i {
     color: var(--primary);
+}
+
+@media screen and (max-width: 570px) {
+    .project-item {
+        display: block;
+        flex-direction: column;
+        width: 100%;
+        margin-bottom: 3rem;
+    }
+    .project-item:hover .project-img img {
+        transform: scale(1.1);
+    }
+    .project-item:nth-child(odd) {
+        margin-right: 3rem;
+    }
+    .project-img {
+        width: 100%;
+        height: 250px;
+        overflow: hidden;
+    }
+    .project-img img {
+        object-fit: contain;
+    }
 }
