--- a/src/css/grid.css
+++ b/src/css/grid.css
@@ -4,6 +4,9 @@
 div[class^=col] {
     padding: 0 15px;
 }
+.col-lg-0 {
+    width: calc(100% / 12 * 0);
+}
 .col-lg-1 {
     width: calc(100% / 12 * 1);
 }
@@ -51,6 +54,9 @@ div[class^=col] {
 
 
 @media screen and (max-width: 1024px){
+    .col-md-0 {
+        width: calc(100% / 12 * 0);
+    }
     .col-md-1 {
         width: calc(100% / 12 * 1);
     }
@@ -98,6 +104,9 @@ div[class^=col] {
 }
 
 @media screen and (max-width: 786px){
+    .col-sm-0 {
+        width: calc(100% / 6 * 0);
+    }
    .col-sm-1 {
        width: calc(100% / 6 * 1);
    }
