--- a/src/css/grid.css
+++ b/src/css/grid.css
@@ -6,6 +6,7 @@ div[class^=col] {
 }
 .col-lg-0 {
     width: calc(100% / 12 * 0);
+    padding: 0 !important;
 }
 .col-lg-1 {
     width: calc(100% / 12 * 1);
@@ -56,6 +57,7 @@ div[class^=col] {
 @media screen and (max-width: 1024px){
     .col-md-0 {
         width: calc(100% / 12 * 0);
+        padding: 0 !important;
     }
     .col-md-1 {
         width: calc(100% / 12 * 1);
@@ -106,6 +108,7 @@ div[class^=col] {
 @media screen and (max-width: 786px){
     .col-sm-0 {
         width: calc(100% / 6 * 0);
+        padding: 0 !important;
     }
    .col-sm-1 {
        width: calc(100% / 6 * 1);
