--- a/src/css/modules_text.css
+++ b/src/css/modules_text.css
@@ -13,8 +13,8 @@
 .title-top::after {
     content: '';
     display: inline-block;
-    width: 50px;
-    height: 2px;
+    width: 5rem;
+    height: 0.2rem;
     background: var(--primary);
     margin-right: 1.5rem;
     vertical-align: middle;
@@ -33,6 +33,24 @@
     font-size: 5.5rem;
     letter-spacing: -0.02em;
     font-weight: 300;
+}
+
+@media screen and (max-width: 786px) {
+    .title-top {
+        color: var(--primary);
+        font-size: 1.6rem;
+        margin-bottom: 3rem;
+    }
+    .title-main {
+        font-size: 4rem;
+        letter-spacing: -0.05em;
+        line-height: 5rem;
+        margin-bottom: 1rem;
+    }
+    .title-sub {
+        font-size: 4rem;
+        letter-spacing: -0.05em;
+    }
 }
 
 /* 프로젝트 모듈 */
@@ -161,7 +179,7 @@
     }
 }
 
-/* text moduls */
+/* sub project text modules */
 .btn-text-group {
     line-height: 5rem;
     margin-bottom: 4rem;
@@ -228,5 +246,10 @@
     }
     .icon-desc-item:nth-child(odd) {
         padding-right: 0;
+    }
+}
+@media screen and (max-width: 786px) {
+    .btn-text-group span {
+        font-size: 2rem;
     }
 }
